<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ED000000"
    tools:context=".ui.pokemonFragment.PokemonDetailFragment">


    <LinearLayout
        android:id="@+id/onBack"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:gravity="center_vertical|end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:contentDescription="@string/Back"
        android:layout_width="81dp"
        android:layout_height="81dp"
        android:foregroundGravity="center"
        android:src="@drawable/ic_onback" />

</LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">




    <ProgressBar
        android:id="@+id/progressBarDetail"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"/>


    <ImageView
        android:contentDescription="@string/PokemonImage"
        android:id="@+id/imviPokemon"
        android:layout_width="268dp"
        android:layout_height="213dp"
        app:layout_constraintBottom_toTopOf="@+id/tvPokemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/tvPokemon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pokemonTypes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imviPokemon"
        tools:text="Charizard" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pokemonTypes"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPokemon">


        <androidx.cardview.widget.CardView
            app:cardElevation="16dp"
            android:id="@+id/btnTryAgain"
            android:visibility="gone"
            android:layout_width="101dp"
            android:layout_height="60dp"
            android:backgroundTint="#0047FF"
            app:cardCornerRadius="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/TryAgain"
                    android:gravity="center"
                    android:textColor="@color/white"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/tvType1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvType2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemonTypes"
        tools:background="@color/white">

        <View
            android:id="@+id/viewHP"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:background="@color/HP" />

        <View
            android:id="@+id/viewDef"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:background="@color/Defense" />

        <View
            android:id="@+id/viewSpeed"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:background="@color/Speed" />

        <View
            android:id="@+id/viewAttk"

            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:background="@color/Attack" />

        <View
            android:id="@+id/viewSpDef"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:background="@color/SpDefense" />

        <View
            android:id="@+id/viewSpAttk"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:background="@color/SpAttack" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/black"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:background="@color/white">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/HP"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="9sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/Def"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="9sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/Speed"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="9sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/Attk"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="9sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/Sp.Def"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="9sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/Sp.Attk"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="9sp"
            android:textStyle="bold" />
    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>